# smokedduck-whatif

./: CMakeLists.txt  Makefile  README.md
fade_data/: dbtoast_july9.csv  fade_single_jul10.csv  forward_backward_0.1_april26.csv
fade_scripts/: ablation_analysis.py  ablation_analysis_v2.py  dbt.py  dbt_v2.py  download_flights.py  optimizer.py  optimizer_v2.py  plot_dense.py  plot_scale.py  preprocessing_timing.py  preprocessing_timing_v2.py  provsql.py  search_plot.py  search_plot_all.py  simd_analysis.py  utils.py
smokedduck/: benchmar_forward_vs_backward.sh  benchmar_forward_vs_backward.shk  benchmark.sh  benchmark_cube.sh  benchmark_forward_vs_backward.sh  crossfilter_test.py  datasets_size.py  dbt_process.py  dbtoaster.sh  demo.sh  eval_query.py  intel_prep.py  ksemimodule_test.py  lineage_overhead.sh  lineage_query.py  minimal_test.py  nsf_benchmark.sh  nsf_whatif.py  operators.py  prep_db.py  prep_micro.py  provenance_models.py  scorpion.py  scorpion_local.py  search.sh  smokedduck.py  sql_statements.py  test.py  test_erdb.py  test_flights.py  test_nested.py  test_predicate_search.py  test_sa.py  test_whatif.py  test_whatif_cube.py  test_whatif_micro.py  tpch_all_test.py  tpch_subset_test.py  (+2 more)
tools/smokedduck/: README.md  build-wheels.sh  clean_smokedduck.sh  config.py  pyproject.toml  setup.sh
tools/smokedduck/examples/: crossfilter_test.py  ksemimodule_test.py  minimal_test.py  operator_level.py  test.py
tools/smokedduck/smokedduck/: __init__.py  lineage_query.py  operators.py  provenance_models.py  smokedduck.py
tools/smokedduck/tests/: test_basic.py
(+241 files in other folders)
